add new endpoints:  - permission, allow to delete and add permission list members, without knowing what is in there  - permission, allow to delete and add roles list members, without knowing what is in there  - roles, allow to delete and add users list members, without knowing what is in there
updated swagger definition file
