# el_aap_api/controllers/permissions.py
@@ -23,10 +23,10 @@ def search(m_permissions, m_sessions, m_users):
 @app.post('/elaap/api/v1/permissions')
 def create(m_permissions, m_sessions, m_users, m_roles):
     jsonschema.validate(request.json, PERMISSIONS_CREATE, format_checker=jsonschema.draft4_format_checker)
+    m_users.require_admin(m_sessions.get_user(request))
     if 'roles' in request.json:
         if not m_roles.check_ids(request.json['roles']):
             raise InvalidBody('some roles missing')
-    m_users.require_admin(m_sessions.get_user(request))
     result = m_permissions.create(request.json)
     response.status = 201
     return result
@@ -41,14 +41,53 @@ def get(m_permissions, m_sessions, m_users, permission):
 @app.put('/elaap/api/v1/permissions/<permission>')
 def update(m_permissions, m_sessions, m_users, m_roles, permission):
     jsonschema.validate(request.json, PERMISSIONS_UPDATE, format_checker=jsonschema.draft4_format_checker)
+    m_users.require_admin(m_sessions.get_user(request))
     if 'roles' in request.json:
         if not m_roles.check_ids(request.json['roles']):
             raise InvalidBody('some roles missing')
-    m_users.require_admin(m_sessions.get_user(request))
     return m_permissions.update(permission, request.json)
+
+
+@app.put('/elaap/api/v1/permissions/<permission>/permissions')
+def update_permissions(m_permissions, m_sessions, m_users, permission):
+    if not type(request.json) == list:
+        raise InvalidBody("must be of type list")
+    schematest = {'permissions': request.json}
+    jsonschema.validate(schematest, PERMISSIONS_UPDATE, format_checker=jsonschema.draft4_format_checker)
+    m_users.require_admin(m_sessions.get_user(request))
+    return m_permissions.add_permissions(permission, request.json)
+
+
+@app.put('/elaap/api/v1/permissions/<permission>/roles')
+def update_roles(m_permissions, m_sessions, m_users, m_roles, permission):
+    m_users.require_admin(m_sessions.get_user(request))
+    if type(request.json) == list:
+        if not m_roles.check_ids(request.json):
+            raise InvalidBody('some roles missing')
+    else:
+        raise InvalidBody("must be of type list")
+    return m_permissions.add_roles(permission, request.json)
 
 
 @app.delete('/elaap/api/v1/permissions/<permission>')
 def delete(m_permissions, m_sessions, m_users, permission):
     m_users.require_admin(m_sessions.get_user(request))
     return m_permissions.delete(permission)
+
+
+@app.delete('/elaap/api/v1/permissions/<permission>/permissions')
+def delete_permissions(m_permissions, m_sessions, m_users, permission):
+    if not type(request.json) == list:
+        raise InvalidBody("must be of type list")
+    schematest = {'permissions': request.json}
+    jsonschema.validate(schematest, PERMISSIONS_UPDATE, format_checker=jsonschema.draft4_format_checker)
+    m_users.require_admin(m_sessions.get_user(request))
+    return m_permissions.remove_permissions(permission, request.json)
+
+
+@app.delete('/elaap/api/v1/permissions/<permission>/roles')
+def delete_roles(m_permissions, m_sessions, m_users, permission):
+    if not type(request.json) == list:
+        raise InvalidBody("must be of type list")
+    m_users.require_admin(m_sessions.get_user(request))
+    return m_permissions.remove_roles(permission, request.json)
