# el_aap_api/models/permissions.py
@@ -8,7 +8,6 @@ from el_aap_api.models.mixins import FilterMixIN, ProjectionMixIn
 from el_aap_api.errors import *
 
 
-
 class Permissions(FilterMixIN, ProjectionMixIn):
     def __init__(self, coll):
         self.defaultfields = {
@@ -19,6 +18,36 @@ class Permissions(FilterMixIN, ProjectionMixIn):
             'scope': 1
         }
         self._coll = coll
+
+    def add_permissions(self, _id, permissions):
+        update = {'$addToSet': {"permissions": {"$each": permissions}}}
+        try:
+            result = self._coll.find_one_and_update(
+                filter={'_id': _id},
+                update=update,
+                projection=self._projection(),
+                return_document=pymongo.ReturnDocument.AFTER
+            )
+        except pymongo.errors.ConnectionFailure as err:
+            raise MongoConnError(err)
+        if result is None:
+            raise ResourceNotFound(_id)
+        return result
+
+    def add_roles(self, _id, roles):
+        update = {'$addToSet': {"roles": {"$each": roles}}}
+        try:
+            result = self._coll.find_one_and_update(
+                filter={'_id': _id},
+                update=update,
+                projection=self._projection(),
+                return_document=pymongo.ReturnDocument.AFTER
+            )
+        except pymongo.errors.ConnectionFailure as err:
+            raise MongoConnError(err)
+        if result is None:
+            raise ResourceNotFound(_id)
+        return result
 
     def create(self, permission):
         try:
@@ -51,7 +80,37 @@ class Permissions(FilterMixIN, ProjectionMixIn):
         except pymongo.errors.ConnectionFailure as err:
             raise MongoConnError(err)
 
-    def remove_role(self, role):
+    def remove_permissions(self, _id, permissions):
+        update = {"$pullAll": {"permissions": permissions}}
+        try:
+            result = self._coll.find_one_and_update(
+                filter={'_id': _id},
+                update=update,
+                projection=self._projection(),
+                return_document=pymongo.ReturnDocument.AFTER
+            )
+        except pymongo.errors.ConnectionFailure as err:
+            raise MongoConnError(err)
+        if result is None:
+            raise ResourceNotFound(_id)
+        return result
+
+    def remove_roles(self, _id, roles):
+        update = {"$pullAll": {"roles": roles}}
+        try:
+            result = self._coll.find_one_and_update(
+                filter={'_id': _id},
+                update=update,
+                projection=self._projection(),
+                return_document=pymongo.ReturnDocument.AFTER
+            )
+        except pymongo.errors.ConnectionFailure as err:
+            raise MongoConnError(err)
+        if result is None:
+            raise ResourceNotFound(_id)
+        return result
+
+    def remove_role_from_all(self, role):
         try:
             self._coll.update_many(
                 filter={"roles": role},
